<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:id="@+id/edit_result"
        android:layout_marginTop="21dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:cursorVisible="false"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_result"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:stretchColumns="*"
        android:orientation="vertical">


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="21dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btnSin"
                android:text="@string/btn_sin"
                android:layout_weight="1"
                style="@style/btn_style"
                android:background="@drawable/fbtn"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btnCos"
                android:text="@string/btn_cos"
                android:layout_weight="1"
                style="@style/btn_style"
                android:background="@drawable/fbtn"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btnTg"
                android:text="@string/btn_tg"
                android:layout_weight="1"
                style="@style/btn_style"
                android:background="@drawable/fbtn"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btnCtg"
                android:text="@string/btn_ctg"
                android:layout_weight="1"
                style="@style/btn_style"
                android:background="@drawable/fbtn"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="21dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btn_lin_eq"
                android:text="@string/btn_lin_eq"
                style="@style/btn_style"
                android:background="@drawable/obtn"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btn_mult"
                android:text="@string/btn_mult"
                style="@style/btn_style"
                android:background="@drawable/obtn"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btn_div"
                android:text="@string/btn_div"
                style="@style/btn_style"
                android:background="@drawable/obtn"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btn_reset"
                android:text="@string/btn_reset"
                android:layout_marginLeft="10dp"
                style="@style/btn_style"
                android:background="@drawable/rbtn"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="25dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btn_1"
                android:text="@string/btn_1"
                style="@style/btn_style"
                android:background="@drawable/nbtn"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btn_2"
                android:text="@string/btn_2"
                style="@style/btn_style"
                android:background="@drawable/nbtn"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btn_3"
                android:text="@string/btn_3"
                style="@style/btn_style"
                android:background="@drawable/nbtn"/>

            <Button
                android:layout_width="15dp"
                android:layout_height="fill_parent"
                android:id="@+id/btn_plus"
                android:text="@string/btn_plus"
                android:layout_marginLeft="10dp"
                style="@style/btn_style"
                android:background="@drawable/obtn"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="21dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btn_4"
                android:text="@string/btn_4"
                style="@style/btn_style"
                android:background="@drawable/nbtn"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btn_5"
                android:text="@string/btn_5"
                style="@style/btn_style"
                android:background="@drawable/nbtn"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btn_6"
                android:text="@string/btn_6"
                style="@style/btn_style"
                android:background="@drawable/nbtn"/>

            <Button
                android:layout_width="15dp"
                android:layout_height="fill_parent"
                android:id="@+id/btn_minus"
                android:text="@string/btn_minus"
                android:layout_marginLeft="10dp"
                style="@style/btn_style"
                android:background="@drawable/obtn"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="21dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btn_7"
                android:text="@string/btn_7"
                style="@style/btn_style"
                android:background="@drawable/nbtn"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btn_8"
                android:text="@string/btn_8"
                style="@style/btn_style"
                android:background="@drawable/nbtn"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/btn_9"
                android:text="@string/btn_9"
                style="@style/btn_style"
                android:background="@drawable/nbtn"/>

            <Button
                android:layout_width="15dp"
                android:layout_height="fill_parent"
                android:id="@+id/btn_eql"
                android:text="@string/btn_eql"
                android:layout_marginLeft="10dp"
                style="@style/btn_style"
                android:background="@drawable/ebtn"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>
